build: compile test sources against the java 8 api surface